# nhanes_cvr

./: .gitignore  Design.md  FrameworkDesign.excalidraw  KMeansDesign.excalidraw  README.md  configHash  requirements.txt  setup.cfg
nhanes_cvr/: BalancedKFold_test.py  __main__.py  app.py  combinefeatures.py  combinefeatures_test.py  config.py  cvrAllRun.py  cvrHandpickedRun.py  gridsearch.py  hypertenPaperRun.py  mlProcess.py  plots.py  selection.py  selection_test.py  test.py  transformers.py  transformers_test.py  trial.py  types.py  utils.py  utils_test.py
results/: all_results.csv  all_results.html  all_test_results.csv  all_train_results.csv  best_model_results.csv  best_model_results.html  best_results.csv  best_results.html  classic_heart_attack_feature_description.csv  combineFeatures.csv  combine_all_feature_description.csv  correlationNoNulls_correlatedFeatures.csv  correlationNoNulls_results.csv  correlationNoNulls_test_results.csv  correlationNoNulls_train_results.csv  correlation_correlatedFeatures.csv  correlation_results.csv  correlation_test_results.csv  correlation_train_results.csv  dead_dataset_info.csv  feature_types.csv  handPickedNoNullsAndOutliers_test_results.csv  handPickedNoNullsAndOutliers_train_results.csv  handPickedNoNulls_results.csv  handPickedNoNulls_test_results.csv  handPickedNoNulls_train_results.csv  handpickedNoNull_features.csv  handpicked_features.csv  handpicked_results.csv  handpicked_test_results.csv  handpicked_train_results.csv  hypertension_dataset_info.csv  hypertension_label_info.csv  lab_work_feature_description.csv  (+2 more)
(+832 files in other folders)
