[metadata]
name = nhanse-cvr
version = 0.0.1

[options]
install_requires =
    pandas
    scikit-learn
    numpy
    matplotlib
    pytest
    nhanes-dl
    seaborn
    toolz
    imbalanced-learn    

packages = find:

[options.packages.find] (always `find` even if `find_namespaces:` was used before)
include=nhanes_cvr/*
exclude=nhanes_cvr/*_test*